# workload-benchmarks

./: README.md
.github/workflows/: django.yml  dotnet.yml  python-django.yml
apps/: insomnia.json
apps/django/: docker-entrypoint.sh
apps/django/.config/: dev.env
apps/django/pets/: views.py  (+1 more)
apps/dotnet/: Dockerfile  Program.cs  README.md  appsettings.Development.json  docker-compose.yaml  pets.csproj
apps/wl1-python-django/: .gitignore  Dockerfile  clear.sh  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  readme.md
apps/wl1-python-django/.config/: dev.env  prod.env
apps/wl1-python-django/api/: Dockerfile  manage.py  pyproject.toml  serializers.py  views.py
apps/wl1-python-django/api/.config/: dev.env
apps/wl1-python-django/api/migrations/: 0001_initial.py
apps/wl1-python-django/api/owners/: serializers.py  views.py
apps/wl1-python-django/api/wl1_python_django/: settings.py  wsgi.py
apps/wl1-python-django/infrastructure/: cloud-init.sh  main.tf  variables.tf
apps/wl1-python-django/k6/: package.json  plan.js  readme.md
apps/wl1-python-django/owners/migrations/: 0001_initial.py
apps/wl1-python-django/pets/: models.py  serializers.py  views.py
apps/wl1-python-django/pets/migrations/: 0001_initial.py
apps/wl1-python-django/wl1_python_django/: asgi.py  settings.py  urls.py
infrastructure/: main.tf
infrastructure/dotnet/: main.tf  variables.tf
infrastructure/jumpbox/: main.tf  variables.tf
infrastructure/workload/: main.tf  variables.tf
loadtest/: package-lock.json  package.json  pets.js  plan-django.js  plan.js  readme.md
(+33 files in other folders)
